# ToolDev_MinecraftTool

./: .gitignore  CMakeLists.txt  License.txt  MinecraftTool.cpp  MinecraftTool.sln  MinecraftTool.vcxproj
CommandLineProject/: CMakeLists.txt  CommandLineTool.cpp
CommonCodeProject/: CMakeLists.txt  CommonCode.h
GUIProject/: CMakeLists.txt
GUIProject/JuceGUI/: CMakeLists.txt  MainComponent.cpp  MainComponent.h  TableModel.cpp  TableModel.h
Resources/: minecraftMats.mtl
